examples/test/testpolicy9063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9063
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key17: value41
      key35: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value10
          key31: value2
          key30: value49
      podSelector:
        matchLabels:
          key19: value24
          key5: value39
          key11: value0
